Reetan.Nayak Dev 25/force-app/main/default/objects/CurrencyType__c/CurrencyType__c.object-meta.xml
<CustomObject>
    <label>CurrencyType</label>
    <nameField>
        <label>CurrencyType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CurrencyType</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>