Reetan.Nayak Dev 25/force-app/main/default/objects/CurrencyType__c/fields/ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate__c</fullName>
    <label>ConversionRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>