Reetan.Nayak Dev 25/force-app/main/default/objects/CurrencyType__c/fields/DecimalPlaces__c.field-meta.xml
<CustomField>
    <fullName>DecimalPlaces__c</fullName>
    <label>DecimalPlaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>