Reetan.Nayak Dev 25/force-app/main/default/objects/CurrencyType__c/fields/IsoCode__c.field-meta.xml
<CustomField>
    <fullName>IsoCode__c</fullName>
    <label>IsoCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>